responsive the page 2

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
           <p>Built to go virtually anywhere, our models are the starting and end point for all your adventures.</p>
         </div>
       </div>
+      <div class="page3">
+        
+      </div>
     </main>
   </body>
 </html>
