responsive the page 2

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Awareded Website</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- icons -->
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
   </head>
   <body>
     <div class="bg">
@@ -83,8 +88,64 @@
           <p>Built to go virtually anywhere, our models are the starting and end point for all your adventures.</p>
         </div>
       </div>
-      <div class="page3">
-        
+      <div class="page4">
+        <div class="page4-container">
+          <!-- card 1 -->
+          <div class="card">
+            <div class="card-header">1/2</div>
+            <div class="card-img">
+              <i class="ri-arrow-left-line"></i>
+              <img src="/assets/BACK_A_Pale_V3-2048x1344.webp" alt="">
+              <i class="ri-arrow-right-line"></i>
+
+            </div>
+            <div class="card-footer">
+              <h4>
+                Models
+              </h4>
+              <div class="content">
+                <h1>BASE 1</h1>
+                <h3>PLANS <sup>+  </sup></h3>
+              </div>
+              <div class="golee"></div>
+              <div class="content">
+                <div class="content-text-bottom">
+                  <h2>1 Bedroom Loft – 860 sq ft</h2>
+                  <p>Pre-launch: Prices TBA</p>
+                </div>
+                <p>Our signature model has the basics covered. Compact yet generous, efficient yet flexible, it maximizes its space for your comfort.</p>
+              </div>
+
+            </div>
+          </div>
+          <!-- card 2 -->
+          <div class="card">
+            <div class="card-header">1/2</div>
+            <div class="card-img">
+              <i class="ri-arrow-left-line"></i>
+              <img src="/assets/BACK_A_Pale_V3-2048x1344.webp" alt="">
+              <i class="ri-arrow-right-line"></i>
+
+            </div>
+            <div class="card-footer">
+    <h4>  model</h4>
+              <div class="content">
+                <h1>BASE 1</h1>
+                <h3>PLANS <sup>+  </sup></h3>
+              </div>
+              <div class="golee"></div>
+              <div class="content">
+                <div class="content-text-bottom">
+                  <h2>1 Bedroom Loft – 860 sq ft</h2>
+                  <p>Pre-launch: Prices TBA</p>
+                </div>
+                <p>Our signature model has the basics covered. Compact yet generous, efficient yet flexible, it maximizes its space for your comfort.</p>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
       </div>
     </main>
   </body>
